--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Iframe Test</title>
+    <title>Responsive Iframe</title>
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        background-color: black; /* Avoid grey screen */
+      }
+      iframe {
+        position: absolute;
+        border: none;
+        width: 100%;
+        height: 100%;
+        inset: 0;
+      }
+    </style>
   </head>
   <body>
-<iframe 
-width="1920" 
-height="1080" 
-src="https://embed.windy.com/embed.html?type=map&location=coordinates&metricRain=default&metricTemp=default&metricWind=default&zoom=6&overlay=wind&product=ecmwf&level=surface&lat=-42.458&lon=-187.695&pressure=true&message=true" 
-frameborder="0"
-sandbox="allow-scripts allow-same-origin"
-></iframe>
+    <iframe
+      src="https://embed.windy.com/embed.html?type=map&location=coordinates&metricRain=default&metricTemp=default&metricWind=default&zoom=6&overlay=wind&product=ecmwf&level=surface&lat=-42.458&lon=-187.695&pressure=true&message=true"
+      sandbox="allow-scripts allow-same-origin"
+    ></iframe>
   </body>
 </html>
