--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Responsive Iframe</title>
+    <title>Teams Room Signage Test</title>
     <style>
       html, body {
         margin: 0;
         padding: 0;
+        background-color: black;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         height: 100%;
-        background-color: black; /* Avoid grey screen */
-      }
-      iframe {
-        position: absolute;
-        border: none;
-        width: 100%;
-        height: 100%;
-        inset: 0;
+        font-family: sans-serif;
+        font-size: 2rem;
       }
     </style>
   </head>
   <body>
-    <iframe
-      src="https://embed.windy.com/embed.html?type=map&location=coordinates&metricRain=default&metricTemp=default&metricWind=default&zoom=6&overlay=wind&product=ecmwf&level=surface&lat=-42.458&lon=-187.695&pressure=true&message=true"
-      sandbox="allow-scripts allow-same-origin"
-    ></iframe>
+    ✅ This signage test is working!
   </body>
 </html>
