--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100%;
-        font-family: sans-serif;
-        font-size: 2rem;
       }
     </style>
   </head>
   <body>
-    This signage test is working!
+    <img src="signage-test.png" alt="Test Image">
   </body>
 </html>
