--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Teams Room Signage Test</title>
+    <title>Teams Signage Test</title>
     <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        background-color: black;
+      body {
+        background: #222;
         color: white;
+        font-size: 3rem;
         display: flex;
         justify-content: center;
         align-items: center;
+        height: 100vh;
+        margin: 0;
+        font-family: sans-serif;
       }
     </style>
   </head>
   <body>
-    <img src="signage-test.png" alt="Test Image">
+    It works!
   </body>
 </html>
