--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <style>
       body {
         background: #222;
-        color: white;
-        font-size: 3rem;
+        margin: 0;
+        height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
-        margin: 0;
-        font-family: sans-serif;
+      }
+      img {
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: contain;
       }
     </style>
   </head>
   <body>
-    It works!
+    <ing src="signage-test.png" alt="signage" />
   </body>
 </html>
