--- a/index.html
+++ b/index.html
@@ -4,20 +4,18 @@
     <style>
       body {
         background: #222;
-        margin: 0;
-        height: 100vh;
+        color: white;
+        font-size: 3rem;
         display: flex;
         justify-content: center;
         align-items: center;
-      }
-      img {
-        max-width: 100%;
-        max-height: 100%;
-        object-fit: contain;
+        height: 100vh;
+        margin: 0;
+        font-family: sans-serif;
       }
     </style>
   </head>
   <body>
-    <ing src="signage-test.png" alt="signage" />
+    It works!
   </body>
 </html>
