--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <html>
   <head>
-    <title>Teams Signage Test</title>
-    <style>
-      body {
-        background: #222;
-        color: white;
-        font-size: 3rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        font-family: sans-serif;
-      }
-    </style>
+  <style>
+  body {
+    background-image: url('signage-test.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+  h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 40px;
+  }
+  h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+  }
+  </style>
   </head>
-  <body>
-    It works!
+  <body title="Digital Signage Demo">
   </body>
 </html>
